added state for error management

--- a/04-proyecto-seguros/src/index.css
+++ b/04-proyecto-seguros/src/index.css
@@ -2,9 +2,9 @@ html {
   box-sizing: border-box;
 }
 body {
-  background: #e96443;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #904e95, #e96443);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #904e95, #e96443); 
+  background: url('./assets/fondo.jpg') no-repeat;
+  background-size: 100% 100vh;
+  background-blend-mode: screen;
   font-family: Arial, Helvetica, sans-serif;
 }
 ul {
