--- a/04-proyecto-seguros/src/index.css
+++ b/04-proyecto-seguros/src/index.css
@@ -2,9 +2,10 @@ html {
   box-sizing: border-box;
 }
 body {
-  background: url('./assets/fondo.jpg') no-repeat;
-  background-size: 100% 100vh;
-  background-blend-mode: screen;
+  background: rgba(0,0,0,.3) url('./assets/fondo.jpg') no-repeat;
+  background-size: 100% 80vh;
+  background-position-y: 60px;
+  background-blend-mode: multiply;
   font-family: Arial, Helvetica, sans-serif;
 }
 ul {
