--- a/13-proyecto-bebidas-context/src/index.css
+++ b/13-proyecto-bebidas-context/src/index.css
@@ -19,3 +19,11 @@ h1 {
   text-align: center;
   font-size: 3rem;
 }
+
+input[type="submit"]:active{
+  position: relative;
+  top: 2px;
+  background-color: #ec3a49;
+  color: #fff;
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7))
+}
